# Test2.0

./: CMakeLists.txt
.devcontainer/: devcontainer.json
include/: developer.hpp  junior_developer.hpp  senior_developer.hpp
resources/: senior_logo.txt
src/: CMakeLists.txt  developer.cpp  junior_developer.cpp  main.cpp  senior_developer.cpp
tests/: CMakeLists.txt  test_developer.cpp
